@@ -755,6 +755,8 @@ bool wxBitmap::DoCreate(int w, int h, int d, WXHDC hdc)
 {
     UnRef();
 
+    wxCHECK_MSG( w > 0 && h > 0, false, wxT("invalid bitmap size") );
+
     m_refData = new wxBitmapRefData;
 
     GetBitmapData()->m_width = w;
